# RAG

./: .gitignore  pyproject.toml  requirements.txt  setup.py
graphrag/: L3-prep_text_for_RAG.ipynb  graphrag00.ipynb
multimodal/: byaldi.ipynb  byaldi_local.ipynb
multimodal/.byaldi/attention/embeddings/: embeddings_0.pt
src/: chat.ipynb  chat_agent.ipynb  prompt.py  utils.py
src/utils/: test.py
